fix text center alignment

--- a/src/calendarBookingForm/Components/Variant.scss
+++ b/src/calendarBookingForm/Components/Variant.scss
@@ -23,7 +23,6 @@
     text-align: center;
     width: 6rem;
     font-size: 15px;
-    padding: .5rem;
     &:hover{
         cursor: pointer;
     }
