--- a/src/calendarBookingForm/Components/VariantList.scss
+++ b/src/calendarBookingForm/Components/VariantList.scss
@@ -37,6 +37,7 @@
     padding-top: 1rem;
     font-size: .7rem;
     color: rgb(119, 119, 119);
+    text-align: center;
 }
 @include Phone {
   .VariantContainer { 
